Fix: Checkbox/radio label alignment
- Wrap checkbox and radio labels so that all the text lines up at the left edge (22px from the left of the checkbox or radio button)

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,3 +29,15 @@ body {
     line-height: $spacing-etalon;
   }
 }
+
+.checkbox-example {
+  width: 200px;
+
+  label {
+    padding-left: 21px;
+
+    > .icheckbox {
+      margin-left: -21px;
+    }
+  }
+}
